✨ (package.json): add "@radix-ui/react-dropdown-menu" dependency to enable dropdown menu functionality in the application ✨ (public/main.js): add logic to handle refresh token in the access token response ✨ (src/components/Reschedule/DataTable.jsx): add dropdown menu component to allow users to customize column visibility ✨ (src/components/ui/dropdown-menu.jsx): add dropdown menu component with various subcomponents for customization 🔧 (src/hooks/useSalesforce.js): handle logout and clear local storage if refresh token is missing in the access token response 📝 (index.css): add styles to prevent dragging on certain elements and apply no-drag class to disable dragging on specific elements

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,14 @@ input {
   -webkit-app-region: no-drag;
 }
 
+li, ul, ol, form, select, textarea {
+  -webkit-app-region: no-drag;
+}
+
+.no-drag {
+  -webkit-app-region: no-drag !important;
+}
+
 
 
 @layer base {
